--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            form_login:
+                # ...
+                default_target_path: request
             anonymous: lazy
             provider: app_user_provider
             guard:
@@ -23,7 +26,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: request
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
